Bug 583825 - Progressive decoding/display of images no longer works; r=joe a=blocking

Since really we want to send OnStartContainer once per-proxy, it doesn't make the most sense to have such handling be done in imgRequest and imgStatusTracker. This patch moves all that into imgRequestProxy, and fixes the bug.